--- a/eng/pipelines/publish-release-go.yml
+++ b/eng/pipelines/publish-release-go.yml
@@ -5,42 +5,44 @@ pr: none
 extends: 
   template: /eng/pipelines/templates/stages/1es-redirect.yml
   parameters:
-    jobs:
-      - job: Release
-        variables: 
-          - template: /eng/pipelines/templates/variables/image.yml
-        pool:
-          name: $(LINUXPOOL)
-          image: $(LINUXNEXTVMIMAGE)
-          os: linux
+    stages: 
+      - stage: Release
+        jobs:
+          - job: Release
+            variables: 
+              - template: /eng/pipelines/templates/variables/image.yml
+            pool:
+              name: $(LINUXPOOL)
+              image: $(LINUXNEXTVMIMAGE)
+              os: linux
 
-        steps:
-          - template: /eng/steps/set-env.yaml
+            steps:
+              - template: /eng/steps/set-env.yaml
 
-          - template: /eng/steps/build-test-go.yaml
+              - template: /eng/steps/build-test-go.yaml
 
-          - pwsh: |
-              $currentVersion = node -p -e "require('./packages/autorest.go/package.json').version";
-              cd packages/autorest.go
-              npm version --no-git-tag-version $currentVersion
-              npm pack;
-              npm install -g autorest-go-$currentVersion.tgz
-              if ($LASTEXITCODE) {
-                exit $LASTEXITCODE
-              }
-              # npx publish-release `
-              #   --token $(azuresdk-github-pat) `
-              #   --repo autorest.go `
-              #   --owner azure `
-              #   --name "Autorest for Go v$currentVersion" `
-              #   --tag v$currentVersion --notes='Autorest for Go track 2' `
-              #   --prerelease --editRelease false `
-              #   --assets autorest-go-$currentVersion.tgz `
-              #   --target_commitish $(Build.SourceBranchName);
-            displayName: "Publish GitHub Release"
+              - pwsh: |
+                  $currentVersion = node -p -e "require('./packages/autorest.go/package.json').version";
+                  cd packages/autorest.go
+                  npm version --no-git-tag-version $currentVersion
+                  npm pack;
+                  npm install -g autorest-go-$currentVersion.tgz
+                  if ($LASTEXITCODE) {
+                    exit $LASTEXITCODE
+                  }
+                  # npx publish-release `
+                  #   --token $(azuresdk-github-pat) `
+                  #   --repo autorest.go `
+                  #   --owner azure `
+                  #   --name "Autorest for Go v$currentVersion" `
+                  #   --tag v$currentVersion --notes='Autorest for Go track 2' `
+                  #   --prerelease --editRelease false `
+                  #   --assets autorest-go-$currentVersion.tgz `
+                  #   --target_commitish $(Build.SourceBranchName);
+                displayName: "Publish GitHub Release"
 
-          # - script: |
-          #     cd packages/autorest.go
-          #     echo "//registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)" > ./.npmrc
-          #     npm publish --access public
-          #   displayName: "Publish to npm"
+              # - script: |
+              #     cd packages/autorest.go
+              #     echo "//registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)" > ./.npmrc
+              #     npm publish --access public
+              #   displayName: "Publish to npm"
