--- a/eng/pipelines/publish-dev-release-typespec.yml
+++ b/eng/pipelines/publish-dev-release-typespec.yml
@@ -19,5 +19,5 @@ steps:
       if ($LASTEXITCODE) {
         exit $LASTEXITCODE
       }
-      npx publish-release --token $(package-write-token) --repo autorest.go --owner azure --name "TypeSpec emitter for Go v$currentVersion" --tag v$currentVersion --notes='Beta version of TypeSpec emitter for Go SDKs' --prerelease --editRelease false --assets azure-tools-typespec-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
+      npx publish-release --token $(azuresdk-github-pat) --repo autorest.go --owner azure --name "TypeSpec emitter for Go v$currentVersion" --tag v$currentVersion --notes='Beta version of TypeSpec emitter for Go SDKs' --prerelease --editRelease false --assets azure-tools-typespec-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
     displayName: "Publish Dev Release"
