--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester-pre.yaml
@@ -18576,7 +18576,7 @@ language:
     name: SignalRManagementClient
     description: ''
     azureARM: true
-    containingModule: none
+    containingModule: ''
     generateDateTimeRFC3339Helper: true
     groupParameters: true
     headAsBoolean: true
