--- a/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester-pre.yaml
@@ -12455,7 +12455,7 @@ language:
     name: AzureAgFoodPlatformRPService
     description: ''
     azureARM: true
-    containingModule: none
+    containingModule: ''
     generateDateTimeRFC3339Helper: true
     groupParameters: true
     headAsBoolean: true
