Handle path kinds in model properties
This is used as the resource key for ARM resources. Such fields
are exposed as discrete input parameters with the model field
being populated when returned by the service (i.e. read only).
Added some ARM tsps to the codegen suite.

--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure-tools/typespec-go",
-  "version": "0.1.0",
+  "version": "0.1.0-dev.1",
   "description": "TypeSpec emitter for Go SDKs",
   "type": "module",
   "main": "dist/typespec-go/src/index.js",
@@ -50,10 +50,13 @@
     "@azure-tools/cadl-ranch": "~0.12.4",
     "@azure-tools/cadl-ranch-expect": "~0.12.0",
     "@azure-tools/cadl-ranch-specs": "~0.31.1",
+    "@azure-tools/typespec-autorest": "0.40.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.40.0",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
     "@typescript-eslint/parser": "~4.1.1",
+    "@typespec/openapi": "~0.54.0",
     "@types/jest": "~26.0.24",
     "eslint": "~6.6.0",
     "jest": "~27.0.6",
