--- a/eng/pipelines/publish-release-go.yml
+++ b/eng/pipelines/publish-release-go.yml
@@ -5,13 +5,17 @@ pr: none
 extends: 
   template: /eng/pipelines/templates/stages/1es-redirect.yml
   parameters:
-    stages: 
+    stages:
       - stage: Release
+
+        variables: 
+          - template: /eng/pipelines/templates/variables/image.yml
+
         jobs:
           - job: Release
             pool:
-              name: azsdk-pool-mms-ubuntu-2204-1es-pt
-              image: azsdk-pool-mms-ubuntu-2204-1espt
+              name: $(LINUXPOOL)
+              image: $(LINUXVMIMAGE)
               os: linux
 
             steps:
