--- a/eng/pipelines/publish-release-go.yml
+++ b/eng/pipelines/publish-release-go.yml
@@ -1,28 +1,50 @@
 trigger: none
 pr: none
 
-pool:
-  vmImage: "ubuntu-22.04"
 
-steps:
-  - template: ../steps/set-env.yaml
+extends: 
+  template: /eng/pipelines/templates/stages/1es-redirect.yml
+  parameters:
+    stages:
+      - stage: Release
 
-  - template: ../steps/build-test-go.yaml
+        variables: 
+          - template: /eng/pipelines/templates/variables/image.yml
 
-  - pwsh: |
-      $currentVersion = node -p -e "require('./packages/autorest.go/package.json').version";
-      cd packages/autorest.go
-      npm version --no-git-tag-version $currentVersion
-      npm pack;
-      npm install -g autorest-go-$currentVersion.tgz
-      if ($LASTEXITCODE) {
-        exit $LASTEXITCODE
-      }
-      npx publish-release --token $(azuresdk-github-pat) --repo autorest.go --owner azure --name "Autorest for Go v$currentVersion" --tag v$currentVersion --notes='Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
-    displayName: "Publish GitHub Release"
+        jobs:
+          - job: Release
+            pool:
+              name: $(LINUXPOOL)
+              image: $(LINUXVMIMAGE)
+              os: linux
 
-  - script: |
-      cd packages/autorest.go
-      echo "//registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)" > ./.npmrc
-      npm publish --access public
-    displayName: "Publish to npm"
+            steps:
+              - template: /eng/steps/set-env.yaml
+
+              - template: /eng/steps/build-test-go.yaml
+
+              - pwsh: |
+                  $currentVersion = node -p -e "require('./packages/autorest.go/package.json').version";
+                  cd packages/autorest.go
+                  npm version --no-git-tag-version $currentVersion
+                  npm pack;
+                  npm install -g autorest-go-$currentVersion.tgz
+                  if ($LASTEXITCODE) {
+                    exit $LASTEXITCODE
+                  }
+                  npx publish-release `
+                    --token $(azuresdk-github-pat) `
+                    --repo autorest.go `
+                    --owner azure `
+                    --name "Autorest for Go v$currentVersion" `
+                    --tag v$currentVersion --notes='Autorest for Go track 2' `
+                    --prerelease --editRelease false `
+                    --assets autorest-go-$currentVersion.tgz `
+                    --target_commitish $(Build.SourceBranchName);
+                displayName: "Publish GitHub Release"
+
+              - script: |
+                  cd packages/autorest.go
+                  echo "//registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)" > ./.npmrc
+                  npm publish --access public
+                displayName: "Publish to npm"
