Various emitter cleanup
Added support for unsigned int types.
Removed some commented out and dead code. This includes the commented
out code for client-side default values in models as tsp doesn't support
that scenario.
Consolidated some type adaptation.
Removed some now-handled TODOs.
No more unused locals.

--- a/packages/typespec-go/tsconfig.json
+++ b/packages/typespec-go/tsconfig.json
@@ -16,7 +16,7 @@
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "noUnusedParameters": false,
     "outDir": "dist",
     "skipLibCheck": true,
