--- a/packages/autorest.gotest/.prettierrc
+++ b/packages/autorest.gotest/.prettierrc
@@ -1,8 +1,15 @@
 {
-    "semi": true,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "printWidth": 180,
-    "endOfLine": "auto"
+    "overrides": [
+        {
+          "files": "*.ts",
+          "options": {
+            "semi": true,
+            "trailingComma": "all",
+            "singleQuote": true,
+            "tabWidth": 2,
+            "printWidth": 180,
+            "endOfLine": "auto"
+          }
+        }
+    ]
 }
